# MTPLX

./: CHANGELOG.md  INSTALL.md  README.md  RELEASE_NOTES_v0.2.1.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: release.yml
docs/: PYPI_RELEASE.md  api.md  development.md  install.md  model-compatibility.md  quickstart.md  runtime-contract.md
mtplx/: artifacts.py  cache_state.py  cli.py  config.py  default_models.py  engine_session.py  fast_sampling.py  generation.py  hf_loader.py  model_scheduler.py  mtp_patch.py  opencode.py  pi.py  prefill_bench.py  profiles.py  sampling.py  session_bank.py  speculative.py  thermal.py  thermal_sidecar.py  version.py
native_extensions/verify_mlp/: .gitignore  CMakeLists.txt  bindings.cpp  setup.py
native_extensions/verify_mlp/gate_up/: gate_up.cpp  gate_up.h  gate_up.metal
native_extensions/verify_mlp/gdn_tail/: gdn_tail.cpp  gdn_tail.h  gdn_tail.metal
native_extensions/verify_mlp/mtplx_native_mlp/: __init__.py
scripts/: fresh_venv_smoke.sh  hygiene_scan.sh  install_macos.sh  install_preview_global.sh
tests/: integration_smoke_cache_hit.sh  test_artifacts.py  test_config_profile_precedence.py  test_default_models.py  test_fast_sampling.py  test_generation_sustained.py  test_hf_loader.py  test_hygiene_scan.py  test_idle_postcommit_subagent.py  test_max_idle_watchdog.py  test_max_lifecycle.py  test_model_scheduler.py  test_no_mlx_imports.py  test_onboarding.py  test_openai_bridge.py  test_opencode.py  test_policy_fingerprint_stability.py  test_postcommit_executor_split.py  test_postcommit_tools_plumbing.py  test_postcommit_wait_integration.py  test_prefill_bench.py  test_prefill_chunk_split.py  test_profiles.py  test_public_cli.py  test_sampling.py  test_server_openai.py  test_session_bank_env_caps.py  test_thermal.py  test_thermal_sidecar.py  test_tool_aware_stream_translator.py  test_ui_progress.py
(+67 files in other folders)
